updating a bunch of stuff

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <title>CarryOn</title>
+    <link rel="icon" type="image/x-icon" href="./src/assets/suitcase-fill.svg">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- These are font links -->
+    <link rel="stylesheet" href="https://use.typekit.net/kpp0qrs.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/9e24421ae4.js" crossorigin="anonymous"></script>
+    <!-- project JavaScript -->
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
