--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>CarryOn</title>
     <link rel="icon" type="image/x-icon" href="./src/assets/suitcase-fill.svg">
+    <link rel="stylesheet" href="https://use.typekit.net/itw5agl.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- These are font links -->
